--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
-  "homepage": "https://vikentorpierre.github.io/public_portfolio",
+  "homepage": "https://VikentorPierre.github.io/public_portfolio",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
